test: Shop 컨트롤러/서비스 테스트 코드 리팩토링